syntax = "proto3";

package signin;

service LoggingInProvider {
  rpc Signin (SigninRequest) returns (SigninReply);
  rpc SigninRestaurant (RestaurantSigninRequest) returns (RestaurantSigninReply);
}

message RestaurantSigninRequest {
  string usertname = 1;
  string password = 2;
}

message RestaurantSigninReply {
  bool outcome = 1;
}

message SigninRequest {
  string usertname = 1;
  string password = 2;
}

message SigninReply {
  bool outcome = 1;
}